--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>COVID-19 DASHBOARD</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://ayushpurnarawat.github.io/COVID-19-DASHBOARD/style.css">
 </head>
     <div class="navigation">
         <input type="checkbox" class="navigation_checkbox" id="navi-toggle">
