--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <header class="header">
         <div class="headerlogo_div">
-            <img src="/logo2.png" class="headerlogo">
+            <img src="![this screenshot](/logo2.png)" class="headerlogo">
         </div>
         <div class="heading_div">
         <h1 class="heading_div--h1_heading">
